--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,8 @@
-<h1>Welcome to Simple Word Counter</h1>
-<form action="/word-count" method="post">
-  <div class="form-group">
-    <label for="string">The string you want to count</label>
-    <br>
-    <!-- <input id="string" name="string" class="form-control" type="text"> -->
-    <textarea name="string" class="form-control" rows="10"></textarea>
+<h1>Character Counter</h1>
+<form action="/results">
+  <div class = "form-group">
+    <label for="phrase">Input your Phrase:</label>
+    <input id="phrase" name="phrase" class="form-control" type="text">
   </div>
-  <div class="form-group">
-    <label for="match_word">The word you want to search against</label>
-    <input id="match_word" name="match_word" class="form-control" type="text">
-  </div>
-  <button type="submit" class="btn-success">Count the Words</button>
-</form> 
+  <button type="submit" class="btn-success">Count the Characters</button>
+</form>
