add integration testing via rspec

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,5 +4,5 @@
     <label for="phrase">Input your Phrase:</label>
     <input id="phrase" name="phrase" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn-success">Count the Characters</button>
+  <button type="submit" class="btn-success">Send</button>
 </form>
